# hcrl_gazebo

./: .rosinstall  CMakeLists.txt  README.md  hcrl_gazebo_plugins.xml  package.xml
config/: stretch.rviz
config/stretch/: body.yaml  dexwrist_follow_joint_trajectory_raw.yaml  follow_joint_trajectory_raw.yaml  gazebo_ros_control_params.yaml  global_costmap_params_withmap.yaml  gripper.yaml  local_costmap_params.yaml  move_base.yaml  ros_control_params.yaml  segmentation_zones.yaml
include/hcrl_gazebo/: stretch_hardware_gazebo.h  stretch_hardware_gazebo_plugin.h
launch/: empty_simulation.launch  empty_simulation_stretch.launch  house_simulation.launch  house_simulation_stretch.launch  playground_simulation.launch  stretch_amcl.launch  stretch_navigation.launch  view_forky_model.launch  view_house.launch
launch/include/: common.xml  spawn_fetch.xml  spawn_stretch.xml
maps/house/: map.pgm  map.yaml
models/aruco_visual_marker_0/: model.sdf
models/hello_robot_materials/: hello_robot.material
models/ycb_005_tomato_soup_can/: model-1_4.sdf
models/ycb_005_tomato_soup_can/meshes/: nontextured.stl  textured.dae
models/ycb_005_tomato_soup_can_aruco/: model-1_4.sdf  model.config
robots/: astro.gazebo.xacro  forky.gazebo.xacro
scripts/: fake_realsense_modes  follow_joint_trajectory_server  house_add_floor_objects  house_add_table_objects
src/: stretch_hardware_gazebo.cpp  stretch_hardware_gazebo_plugin.cpp
urdf/: stretch_dex_wrist.gazebo.xacro  stretch_gripper.gazebo.xacro
worlds/: house.world
