<?xml version="1.0"?>
<package format="2">
  <name>hcrl_gazebo</name>
  <version>1.0.0</version>
  <description>
    Worlds
  </description>
  <license>Apache 2.0</license>
  <maintainer email="nswalker@cs.washington.edu">Nick Walker</maintainer>
  <author email="nswalker@cs.washington.edu">Nick Walker</author>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>astro_description</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>
  <exec_depend>fetch_gazebo_demo</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>knowledge_representation</exec_depend>
  <exec_depend>moveit_ros</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>
  <exec_depend>stretch_gazebo</exec_depend>
  <!-- NOTE(8-27-21,nickswalker): Leaving this off so there's fewer source dependencies required -->
  <!--exec_depend>uw_fetch_bringup</exec_depend-->


  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>
  <depend>gazebo_ros_control</depend>

  <exec_depend>gizmo_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
    <gazebo_ros_control plugin="${prefix}/hcrl_gazebo_plugins.xml"/>
  </export>
</package>
